# backend/generated-sources/src/main/java/com/example/demo/model/Greeting.java
@@ -1,0 +1,67 @@
+package com.example.demo.model;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonValue;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonValue;
+
+/**
+ * あいさつ
+ */
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-09-04T10:01:04.741371500+09:00[Asia/Tokyo]", comments = "Generator version: 7.6.0")
+public enum Greeting {
+  
+  /**
+   * おはよう
+   */
+  good_morning(0),
+  
+  /**
+   * こんにちは
+   */
+  hello(1),
+  
+  /**
+   * おやすみ
+   */
+  good_knight(2);
+
+  private Integer value;
+
+  Greeting(Integer value) {
+    this.value = value;
+  }
+
+  @JsonValue
+  public Integer getValue() {
+    return value;
+  }
+
+  @Override
+  public String toString() {
+    return String.valueOf(value);
+  }
+
+  @JsonCreator
+  public static Greeting fromValue(Integer value) {
+    for (Greeting b : Greeting.values()) {
+      if (b.value.equals(value)) {
+        return b;
+      }
+    }
+    throw new IllegalArgumentException("Unexpected value '" + value + "'");
+  }
+}
+
